manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
labels:
    istio-injection: enabled
