manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
spec:
  selector:
    app: laravel-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
